@@ -1,3 +1,7 @@
+Wed Aug 05 01:28:51 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/colour.py: Various updates and fixes.
+
 Wed Aug 05 00:18:25 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* AUTHORS,docs/image.rst,xappy/colour.py,xappy/fieldactions.py,
